# folder-archiver

./: .gitignore  CHANGELOG.md  README.md  archive_folders_v2.py  pyproject.toml  requirements.txt
