[project]
name = "folder-archiver"
version = "2.0.0"
description = "Python script to archive second-level folders with progress bars"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "tqdm>=4.65.0",
    "humanize>=4.7.0"
]

[project.scripts]
archive-folders = "archive_folders_v2:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"